<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="show_additional_fields">show_additional_fields</string>
    <string name="name">Name</string>
    <string name="phone_number">1122334455</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="hide_additional_fields">hide_additional_fields</string>
    <string name="phone_error">Phone number received from intent is null!</string>
</resources>